# knowledge-lib

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  base_retrieval_results.txt  memory.md  pyproject.toml  results.txt  results_final_test.txt  results_microbatched_final.txt  results_optimized_batch.txt  runlog.txt
docs/: batch_pipeline_architecture.md  batch_timing_analysis.md  concurrency_patterns_summary.md  concurrent_processing_explanation.md  concurrent_vs_batched_mental_model.md  execution_paradigms_analysis.md  gpu_async_pattern.md  gpu_concurrency_analysis.md  pdf_ingestion_pipeline.txt  pdf_pipeline_optimization_summary.md  production_scaling_considerations.md  pytorch_gil_explanation.md  schemas.md
experimental/: README.md
experimental/ingest/: container_pipeline_batched.py  container_pipeline_microbatched.py  gpu_lanes.py  microbatcher.py
experimental/providers/: batched_providers.py
experimental/scripts/: process_pdf_batched.py  process_pdf_microbatched.py  profile_gpu_batching.py
infra/alembic/: env.py
infra/alembic/versions/: 1bd139b8b741_merge_constraints_and_sha256_index_.py  1cdb00b0ff5a_rename_documents_to_containers_and_.py  1e4879a5c508_init_schema_v1.py  3f7a2b1c8c22_update_text_segments_fts_trigger_to_english.py  6480f1d89004_rename_chunks_to_text_segments_and_.py  6e2f5c9b2a10_add_collections_and_containers_join.py  92f1ab7c9b3e_add_expr_fts_english_index.py  b0127cefc16c_add_modality_tables_links_page_dims.py  b3053276e058_add_db_checks_links_modality_table_rows_.py  b473230bcbcd_rename_doc_id_to_container_id_across_.py  c7db4e8a3c7d_unify_segments_minimal_enum_sha_idx_.py  d6a8a1c4a1a9_add_idx_containers_sha256.py  e3e1f8b7cd91_migrate_text_fts_to_english_and_drop_expr.py  f1a2b3c4d5e6_add_page_analysis_and_text_source.py
infra/docker/: .env.example  docker-compose.yml
reports/: results_memory_analysis.txt  results_microbatched.txt  results_microbatched_fixed.txt  results_microbatched_v2.txt  results_non_optimized.txt  results_optimized.txt  results_optimized_batch_v2.txt  scifact_eval.md  scifact_eval_20251112_224932.md  scifact_eval_20251112_235458.md  scifact_eval_20251113_011649.md
scripts/: add_memory_profiling.py  bulk_ingest_dir.py  check_figures_tables.py  debug_pdf_processing.py  ingest_text.py  prepare_beir.py  process_pdf_local.py  profile_mps_memory.py  pymupdf_sanity.py  quick_eval_scifact.py  search_text.py  set_pytorch_threads.py
src/app/: main.py  settings.py
src/app/api/: __init__.py  deps.py
src/app/db/: session_async.py
src/app/domain/: __init__.py  anchors.py  (+4 more)
(+43 files in other folders)
